--- a/src/main/resources/templates/fragments/home/trainee_home.html
+++ b/src/main/resources/templates/fragments/home/trainee_home.html
@@ -17,7 +17,7 @@
         <div class="list-group pt-3 pb-5">
             <ul class="px-3">
                 <h3 class="lead ps-2">Current Week</h3>
-                <li class="d-flex justify-content-between align-items-start mt-2">
+                <li class="d-flex justify-content-between align-items-start mt-2" th:if="${feedbackWeeks.get(currentWeek) != null}">
                     <a th:value="${currentWeek}"
                        th:inline="text"
                        th:href="@{'/feedback?id='+${feedbackWeeks.get(currentWeek).feedbackId}}"
@@ -28,14 +28,14 @@
                 </li>
                 <h3 class="lead ps-2 mt-3">All Weeks</h3>
                 <li th:each="feedbackWeek, iterStat : ${feedbackWeeks}"
-                    class="d-flex justify-content-between align-items-start mt-2">
-                    <a th:value="${feedbackWeek.value.feedbackId}"
-                       th:inline="text"
-                       th:href="@{'/feedback?id='+${feedbackWeek.value.feedbackId}}"
-                       th:text="'Week ' + ${feedbackWeek.key}"
-                       class="list-group-item list-group-item-action fw-bold"></a>
-                    <span class="badge bg-color-red status status-box"
-                          th:classappend="${feedbackWeek.value.status.status == 'Submitted'} ? 'bg-color-green' : 'bg-color-amber'">    </span>
+                    class="d-flex justify-content-between align-items-start mt-2" th:if="${feedbackWeek.value} != null">
+                        <a th:value="${feedbackWeek.value.feedbackId}"
+                           th:inline="text"
+                           th:href="@{'/feedback?id='+${feedbackWeek.value.feedbackId}}"
+                           th:text="'Week ' + ${feedbackWeek.key}"
+                           class="list-group-item list-group-item-action fw-bold"></a>
+                        <span class="badge bg-color-red status status-box"
+                              th:classappend="${feedbackWeek.value.status.status == 'Submitted'} ? 'bg-color-green' : 'bg-color-amber'">    </span>
                 </li>
             </ul>
         </div>
